# jetstream-interpolate-convcnp

./: .gitignore  README.md  pixi.toml  pyproject.toml
notebooks/dev/: eda.ipynb  neuralprocesses3d.ipynb  processing_test.ipynb
scripts/: run_train_v0.1.sh
src/jetstream_interpolate_convcnp/learning/model/: construct_model.py
src/jetstream_interpolate_convcnp/learning/tasks/: dataset.py  sampler.py  tasks.py
src/jetstream_interpolate_convcnp/learning/training/: trainer.py
src/jetstream_interpolate_convcnp/pipelines/configs/: train_v0.1.yaml
src/jetstream_interpolate_convcnp/pipelines/train_v0_1/: dataset_preparation.py  main.py
src/jetstream_interpolate_convcnp/plotting/: vti.py
src/jetstream_interpolate_convcnp/processing/: chunk_netcdf.py  csv_to_parquet.py
src/jetstream_interpolate_convcnp/processing/amdar/: AMDARInterface.py  AMDARProcessor.py  amdar_processor.py
src/jetstream_interpolate_convcnp/processing/ecmwf/: ECMWFInterface.py  ecmwf_interface.py  ecmwf_processor.py
src/jetstream_interpolate_convcnp/processing/era5/: era5_processor.py
src/jetstream_interpolate_convcnp/processing/norm/: netcdf_norm.py
src/jetstream_interpolate_convcnp/tests/: test_config.yaml  test_dataprocess.py
src/jetstream_interpolate_convcnp/utils/: constants.py  conversions.py  settings.py
src/jetstream_interpolate_convcnp/utils/cds/: cds_client.py  run.py
src/jetstream_interpolate_convcnp/utils/cds/cds_requests/: demo.yaml  july_2019.py  july_2019.yaml
