[project]
authors = [{name = "lennoxc", email = "lennoxcrowe16@gmail.com"}]
dependencies = ["pyvista>=0.47.1,<0.48"]
name = "jetstream-interpolate-convcnp"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.9"

[tool.pixi.environments]
gpu = ["gpu"]
default = ["gpu"]
test = ["test"]

[tool.pixi.pypi-dependencies]
jetstream_interpolate_convcnp = { path = ".", editable = true }
neuralprocesses = { path ="../neuralprocesses", editable = true }
cdsapi = ">=0.7.7, <0.8"

[tool.pixi.dependencies]
pytorch = ">=2.10.0,<3"
torchvision = ">=0.25.0,<0.26"
torchaudio = ">=2.10.0,<3"
numpy = ">=2.4.3,<3"
matplotlib = ">=3.10.8,<4"
xarray = ">=2026.2.0,<2027"
dask = ">=2026.3.0,<2027"
cartopy = ">=0.25.0,<0.26"
tensorboard = ">=2.20.0,<3"

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.9.*"
pytorch-gpu = "*"

[tool.pixi.feature.test.dependencies]
pytest = "*"
